crates/burn-onnx/src/burn/node/snapshots/burn_onnx__burn__node__gru__tests__gru_field_forward.snap
---
source: crates/burn-onnx/src/burn/node/gru.rs
expression: code
---
let gru1 = burn::nn::gru::GruConfig::new(4, 8, true)
    .with_reset_after(false)
    .init(device);
